@@ -800,6 +800,8 @@ static Ecore_IMF_Context_Class xim_class = {
    .cursor_location_set = _ecore_imf_context_xim_cursor_location_set,
    .input_panel_imdata_set = NULL,
    .input_panel_imdata_get = NULL,
+   .input_panel_return_key_type_set = NULL,
+   .input_panel_return_key_disabled_set = NULL
 };
 
 static Ecore_IMF_Context *
